@@ -115,9 +115,7 @@ Pop::start (void) throw (pop_err)
 #if DEBUG
 		g_warning ("[%d] Pop exception: %s", uin(), err.what());
 #endif
-		status (MAILBOX_ERROR);
-		unread_.clear ();
-		seen_.clear ();
+		set_status_mailbox_error ();
 		socket_->close ();
 	}
 
